--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "test",
+  "name": "students_api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev" : "nodemon  index.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "joi": "^17.12.2",
+    "nodemon": "^3.1.0"
   }
 }
