--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon --env-file=.env ./index.js",
-    "start": "node --env-file=.env ./index.js"
+    "start": "node ./index.js"
   },
   "keywords": [],
   "author": "",
